tests/ast_interpreter/err_logical_not_int.expected
<string>:1:1: error: logical negation cannot be applied to Int
!5;
^
